# hypergiants-offnet-footprint

./: .gitattributes  .gitignore  LICENSE  README.md  get_ips.sh
bgp-mapping/: Cargo.toml  README.md  asn_prefixes_analysis.py  resolve.sh
bgp-mapping/analysis/: prefix-graph.py
bgp-mapping/src/: main.rs
offnet_scan/: ASes_per_country.csv  README.md  analysis.py  analyze_countries.py  filter_scan_output.py  hosts_certs_per_AS.csv  hosts_certs_per_AS.txt  hosts_per_AS.txt  hosts_per_country.csv  hosts_per_country.txt
offnet_scan/2022-08-21/: output.tar.zst.part00.REMOVED.git-id  output.tar.zst.part01.REMOVED.git-id  output.tar.zst.part02.REMOVED.git-id  output.tar.zst.part03.REMOVED.git-id  zmap_results_global_tcp_443.csv.zst.part00.REMOVED.git-id  zmap_results_global_tcp_443.csv.zst.part01.REMOVED.git-id
offnet_scan/analysis/: ASes_per_country.csv  analysis.py  analyze_countries.py  hosts_countries_per_AS.csv  hosts_per_country.csv  hosts_per_country_old.csv  iana_as_number_assignments.csv  plot.py  plot_hosts_per_rir.py  plot_per_as.py  plot_per_contry.py  plot_per_country.py
offnet_scan/zgrab_config/: input_scan.txt
onnet_scan/: README.md  analyze_output.py  extract_unique_certificates_from_scan.py  extract_unique_headers_from_scan.py
onnet_scan/analysis/: analyze_output.py  header_per_subject.csv  plot.py  status.csv  subject_cert_count.csv
onnet_scan/certificates/: C_US__ST_California__L_Menlo_Park__O_Facebook__Inc___CN___atlassolutions_com_6624893165261522293094249442487479108.pem  (+14 more)
report/: Internet-Kommunikation.bib  report.tex
(+2 files in other folders)
