[package]
name = "bgp-mapping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bgpkit-parser = "0.8.0"
chrono = "0.4.21" 
clap = { version = "3.1.6", features = ["derive"]}
ipnetwork = "0.18.0"
whois-rust = "1.5.0"
